--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,16 +9,20 @@
             "name": "Launch Current Open File",
             "type": "node",
             "request": "launch",
+            "showAsyncStacks": true,
+
             // "preLaunchTask": "AOP",
             // "program": "${file}",
             // "program": "${workspaceFolder}\\built\\AOP",
-            "stopOnEntry": false, 
+            "stopOnEntry": true, 
         //    "localRoot": "${workspaceFolder}\\src\\jspatterns\\",
             "env": {
             },
             "args": [
                 "-r",
                 "ts-node/register",
+                // "-r",
+                // "esnext",
                 "${relativeFile}", // 调试当前文件
                 "--colors",
                 "-t 100000" // 设置超时时间，因为调试时执行时间较长容易触发超时
