--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "code-runner.clearPreviousOutput": true,
     "code-runner.saveFileBeforeRun": true,
     "nodeTdd.activateOnStartup": true,
+    "prettier.useTabs": false,
     "auto-close-tag.activationOnLanguage": [
         "xml",
         "php",
